Name:                hchip
Version:             0.1
Description:         Chip16 emulator
Author:              Patrick Chilton
Maintainer:          chpatrick@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable hchip
  Main-Is:           HChip.hs
  Build-Depends:     base, digest, binary > 0.7, lens, SDL, array, mtl, MonadRandom, bytestring, random, clock, vector
  ghc-options:       -O2
